# terraform-provider-dependencytrack

./: .gitignore  .golangci.yml  CHANGELOG.md  GNUmakefile  README.md  go.mod  go.sum  main.go  nginx.conf
.github/: CODEOWNERS  dependabot.yml
.github/actions/: action-test.yml  cdktf-gen-javascript.yml  cdktf-gen-python.yml  cdktf-gen-typescript.yml  cdktf-rel-typescript-github.yml
.github/workflows/: cdktf-bindings.yml  cdktf-gen-javascript.yml  cdktf-gen-python.yml  cdktf-gen-typescript.yml  cdktf-rel-typescript-github.yml  release.yml  test.yml
.hooks/: pre-commit  pre-push
cdktf/python/: LICENSE  README.md  cdktf.json  pyproject.toml
cdktf/typescript/: cdktf.json  package.json  package.template.json  tsconfig.json
docker_compose/: docker-compose.v5.yml  docker-compose.yml
docs/: index.md
docs/data-sources/: components.md  config_property.md  license.md  license_group.md  notification_publisher.md  oidc_available.md  oidc_group_mappings.md  oidc_login.md  oidc_users.md  permissions.md  project.md  project_property.md  team.md
docs/resources/: acl_mapping.md  component.md  component_property.md  config_properties.md  config_property.md  ldap_team_mapping.md  ldap_user.md  managed_user.md  notification_publisher.md  notification_rule.md  notification_rule_project.md  notification_rule_team.md  oidc_group.md  (+21 more)
scripts/: assign-permission.sh  bootstrap_pipeline.go  change-password.sh  create-project-property.sh  create-project.sh  create-team.sh  create-token.sh  disable-settings.sh  get-valid-permissions.sh  login.sh
tools/: go.mod  go.sum  tools.go
(+173 files in other folders)
